tests/baselines/reference/forBreakStatements.errors.txt
tests/cases/conformance/statements/breakStatements/forBreakStatements.ts(10,1): error TS7028: Unused label.
tests/cases/conformance/statements/breakStatements/forBreakStatements.ts(18,5): error TS7028: Unused label.
tests/cases/conformance/statements/breakStatements/forBreakStatements.ts(29,1): error TS7027: Unreachable code detected.


==== tests/cases/conformance/statements/breakStatements/forBreakStatements.ts (3 errors) ====
    for (; ;) {
        break;
    }
    
    ONE:
    for (; ;) {
        break ONE;
    }
    
    TWO:
    ~~~
!!! error TS7028: Unused label.
    THREE:
    for (; ;) {
        break THREE;
    }
    
    FOUR:
    for (; ;) {
        FIVE:
        ~~~~
!!! error TS7028: Unused label.
        for (; ;) {
            break FOUR;
        }
    }
    
    for (; ;) {
        SIX:
        for (; ;) break SIX;
    }
    
    SEVEN:
    ~~~~~
!!! error TS7027: Unreachable code detected.
    for (; ;) for (; ;) for (; ;) break SEVEN;
    
    EIGHT:
    for (; ;) {
        var fn = function () { }
        break EIGHT;
    }
    